# pdf-to-md

./: README.md  main.py  pyproject.toml
models/: __init__.py  environ.py
ui/: FileUploader.py  __init__.py
