[tool.poetry]
name = "pdf-to-md"
version = "0.1.0"
description = "Converts PDFs into MD"
authors = ["Joen Tan <joentze01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
openai = "^1.53.0"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
